# proyecto_actas

./: README.md  pyproject.toml  scrapping_notas.ipynb
proyecto_notas/: login.py  main.py  navigation.py  web_driver.py
