[tool.poetry]
name = "proyecto-notas"
version = "0.1.0"
description = "proyecto para ver rapido las notas"
authors = ["Alejandro <alejogame97@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.26.1"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
